# toml2json

./: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  defs.bzl  llvm_osx_sysroot.patch  revert_toml2json_to_v0.0.7.patch  rules_rs-msvc.patch  toolchains_llvm_bootstrapped.patch
.github/workflows/: build_release.bat  build_release.sh  build_release_windows.bat  build_release_windows_amd64.bat  build_release_windows_arm64.bat  ci.yml  release.yml
src/: main.rs
