[package]
name = "toml2json"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "toml2json"
path = "src/main.rs"

[dependencies]
toml = {version = "0.9", default-features = false, features = ["parse", "serde"]}
serde_json = {version = "1", default-features = false, features = ["alloc", "std"]}
serde-transcode = { version = "1", default-features = false }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"
